--- a/secrets.env
+++ b/secrets.env
@@ -1,4 +1,4 @@
-MYSQL_PASSWORD=mysecret
-MYSQL_DATABASE=db_name
-MYSQL_USER=db_user
-MYSQL_ALLOW_EMPTY_PASSWORD=1
+MYSQL_DATABASE=project_db
+MYSQL_USER=project_user
+MYSQL_PASSWORD=project_password
+MYSQL_ROOT_PASSWORD: root_password
