--- a/secrets.env
+++ b/secrets.env
@@ -1,4 +1,4 @@
-MYSQL_DATABASE=project_db
-MYSQL_USER=project_user
-MYSQL_PASSWORD=project_password
+MYSQL_DATABASE=bts_database
+MYSQL_USER=bts_user
+MYSQL_PASSWORD=bts_password
 MYSQL_ROOT_PASSWORD: root_password
