--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     platform: linux/x86_64
     image: mysql
     volumes:
-      - db_data:/var/lib/mysql
+      - ./db_data:/var/lib/mysql
       - ./db:/docker-entrypoint-initdb.d
     restart: always
     ports:
